# doc-jan-haskell

./: README.md  cabal.project  doc-jan-haskell.cabal  foo.txt
.github/workflows/: haskell.yml
src/: Test.hs
src/Year2013/: Exam.hs
src/Year2014/: Exam.hs
src/Year2015/: Exam.hs
src/Year2016/: Exam.hs  composerList.html  filmTable.html
src/Year2017/: DC.hs
src/Year2018/: CP.hs
src/Year2019/: SOL.hs  TestData.hs  Types.hs
src/Year2020/: Examples.hs  HashFunctions.hs  Tries.hs  Types.hs
src/Year2021/: Alloc.hs  Examples.hs  Types.hs
src/Year2022/: Examples.hs  SC.hs  Types.hs
src/Year2023/: Clues.hs  Examples.hs  Solver.hs  Types.hs  WordData.hs  thesaurus.txt
src/Year2024/: hft.cabal
src/Year2024/src/: Examples.hs  Int.hs  Types.hs  Utilities.hs
src/Year2024/test/: Tests.hs
src/Year2024/test/IC/: TestSuite.hs
test/: Spec.hs
