cabal-version:      3.0
name:               doc-jan-haskell
version:            0.1.0.0
author:             mmzk1526
maintainer:         mmzk1526@outlook.com
build-type:         Simple


common warnings
    ghc-options: -Wall

library
    -- import:           warnings
    exposed-modules:
        Test,
        Year2019.SOL,
        Year2019.TestData,
        Year2019.Types,
        Year2020.Examples,
        Year2020.HashFunctions,
        Year2020.Tries,
        Year2020.Types,
        Year2021.Alloc,
        Year2021.Examples,
        Year2021.Types,
        Year2022.Examples,
        Year2022.SC,
        Year2022.Types,
    build-depends:
        base,
        mtl,
        transformers,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
        -O2
