cabal-version:      3.0
name:               doc-jan-haskell
version:            0.1.0.0
author:             mmzk1526
maintainer:         mmzk1526@outlook.com
build-type:         Simple
extra-source-files:
    src/Year2016/filmTable.html,
    src/Year2016/composerList.html,
    src/Year2023/thesaurus.txt,

library
    exposed-modules:
        Test,
        Year2014.Exam,
        Year2015.Exam,
        Year2016.Exam,
        Year2017.DC,
        Year2018.CP,
        Year2019.SOL,
        Year2019.TestData,
        Year2019.Types,
        Year2020.Examples,
        Year2020.HashFunctions,
        Year2020.Tries,
        Year2020.Types,
        Year2021.Alloc,
        Year2021.Examples,
        Year2021.Types,
        Year2022.Examples,
        Year2022.SC,
        Year2022.Types,
        Year2023.Clues,
        Year2023.Examples,
        Year2023.Solver,
        Year2023.Types,
        Year2023.WordData,
    build-depends:
        base >= 4.17.2 && < 4.18,
        containers >= 0.6.7 && < 0.7,
        mtl >= 2.2.2 && < 2.3,
        text  >= 2.0.2 && < 2.1,
        transformers >= 0.5.6 && < 0.6,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    type:              exitcode-stdio-1.0
    hs-source-dirs:
        src
        test
    main-is:           Spec.hs
    other-modules:
        Test,
        Year2014.Exam,
        Year2015.Exam,
        Year2016.Exam,
        Year2017.DC,
        Year2018.CP,
        Year2019.SOL,
        Year2019.TestData,
        Year2019.Types,
        Year2020.Examples,
        Year2020.HashFunctions,
        Year2020.Tries,
        Year2020.Types,
        Year2021.Alloc,
        Year2021.Examples,
        Year2021.Types,
        Year2022.Examples,
        Year2022.SC,
        Year2022.Types,
        Year2023.Clues,
        Year2023.Examples,
        Year2023.Solver,
        Year2023.Types,
        Year2023.WordData,
    build-depends:
        base,
        containers,
        hft,
        mtl,
        text,
        transformers,
    default-language:  Haskell2010
